# fgb

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
app/: CMakeLists.txt  main.s  obj.link  obj.s  rom.inc  util.inc
include/: audio.h  cpu.h  instruction.h  memory.h  render.h
include/fgb/: apu.h  cart.h  cpu.h  emu.h  instruction.h  io.h  mmu.h  ppu.h  timer.h  types.h
include/fgb/audio/: channel.h
lib/: CMakeLists.txt  apu.c  cart.c  cpu.c  emu.c  instruction.c  io.c  memory.c  mmu.c  ppu.c  timer.c
lib/audio/: channel.c
src/: audio.c  main.c  render.c
src/fgb/: cpu.c  cpu.h  instruction.c  instruction.h  memory.c  memory.h
test/: CMakeLists.txt  mock_cpu.c  test.c
